syntax = "proto3";
package inner;
option  go_package = "/inner";

message Error
{
}

message GateMsgWrapper
{
    string GateSession = 1;
    string MsgName     = 2;
    bytes  Data        = 3;
}

// session断开,gate通知player
message GSessionClosed
{
    string GateSession = 1;
}

message PullPlayer
{
    string RID = 1;
}
